<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/application_logo"
            android:src="@mipmap/ic_launcher_foreground"
            app:layout_constraintBottom_toTopOf="@+id/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-black"
            app:layout_constraintBottom_toTopOf="@+id/citizen_login"
            app:layout_constraintEnd_toEndOf="@+id/logo_image"
            app:layout_constraintStart_toStartOf="@+id/logo_image"
            app:layout_constraintTop_toBottomOf="@+id/logo_image" />

        <Button
            android:id="@+id/citizen_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/citizen"
            android:textAllCaps="true"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/personnel_login"
            app:layout_constraintEnd_toEndOf="@+id/app_name"
            app:layout_constraintStart_toStartOf="@+id/app_name"
            app:layout_constraintTop_toBottomOf="@+id/app_name" />

        <Button
            android:id="@+id/personnel_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/fire_personnel"
            android:textAllCaps="true"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/citizen_login"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/citizen_login"
            app:layout_constraintTop_toBottomOf="@+id/citizen_login" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>